# cortex

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  context.py  main.py
app/api/: chat.py  documents.py  rag.py
app/middleware/: request_id.py
app/models/: db.py  document.py  schemas.py
app/retrieval/: auto_merging.py  base.py  baseline.py  sentence_window.py
app/services/: chat_service.py  chunking_service.py  conversation_service.py  document_service.py  embedding_backends.py  embedding_service.py  openai_service.py  parser_service.py  rag_service.py
app/storage/: postgres.py  qdrant.py  redis.py
app/tools/: calculator.py  registry.py  weather.py
migrations/: env.py
migrations/versions/: 71326daad49e_create_messages_table.py  8a465b8e4007_create_documents_chunks.py  a1b2c3d4e5f6_add_embedding_model_to_documents.py
tests/: conftest.py  test_chat.py  test_chunking.py  test_conversation.py  test_documents.py  test_embedding.py  test_embedding_backends.py  test_parser.py  test_rag.py  test_retrieval.py  test_stream.py
