[project]
name = "cortex"
version = "0.1.0"
description = "Production-ready AI chat backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.50.0",
    "redis[asyncio]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "sse-starlette>=2.1.0",
    "qdrant-client>=1.9.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=5.6.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "black>=24.0.0",
    "sentence-transformers>=5.6.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '\.venv|tmp'

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "tmp"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E203", "E501", "B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
